<resources>
    <string name="app_name">Midterm Burned Calories</string>
    <string name="weight">Weight</string>
    <string name="miles_ran">Miles Ran</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="height">Height</string>
    <string name="_00">00</string>
    <string name="_1">1</string>
    <string name="_00_0">00.0</string>
    <string name="bmi">BMI</string>
    <string name="name">Name</string>
    <string name="_000">000</string>
    <string name="yourname">YourName</string>
</resources>
